--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.17.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.17.2</version>
+		</dependency>
 
 	</dependencies>
 </project>
